--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
         run: sudo apt install libfdt-dev cmake
 
       - name: Run builder script
-        run: bash build_installer.sh
+        run: mkdir -m 0700 $HOME/.gnupg ; bash build_installer.sh
 
 #      - name: Store created images
 #        uses: actions/upload-artifact@v2
