--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,9 @@ jobs:
         run: |
           echo "SYSUPGRADE_ITB=$(ls -1 | grep sysupgrade.itb)" >> "$GITHUB_ENV"
           echo "RECOVERY_ITB=$(ls -1 | grep recovery.itb)" >> "$GITHUB_ENV"
+          echo "RECOVERY_SIGNED_ITB=$(ls -1 | grep recovery_signed.itb)" >> "$GITHUB_ENV"
           echo "INSTALLER_ITB=$(ls -1 | grep installer.itb)" >> "$GITHUB_ENV"
+          echo "INSTALLER_SIGNED_ITB=$(ls -1 | grep installer_signed.itb)" >> "$GITHUB_ENV"
 
       - name: Upload sysupgrade
         uses: actions/upload-release-asset@v1
@@ -74,6 +76,16 @@ jobs:
           asset_name: ${{ env.RECOVERY_ITB }}
           asset_content_type: application/octet-stream
 
+      - name: Upload signed recovery
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ env.RECOVERY_SIGNED_ITB }}
+          asset_name: ${{ env.RECOVERY_SIGNED_ITB }}
+          asset_content_type: application/octet-stream
+
       - name: Upload recovery installer
         uses: actions/upload-release-asset@v1
         env:
@@ -84,3 +96,12 @@ jobs:
           asset_name: ${{ env.INSTALLER_ITB }}
           asset_content_type: application/octet-stream
 
+      - name: Upload signed recovery installer
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ env.INSTALLER_SIGNED_ITB }}
+          asset_name: ${{ env.INSTALLER_SIGNED_ITB }}
+          asset_content_type: application/octet-stream
