--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,8 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install libfdt-dev and cmake
-        run: sudo apt install libfdt-dev cmake squashfs-tools
+      - name: Update package lists
+        run: sudo apt update
+
+      - name: Install libfdt-dev, cmake and cross toolchain
+        run: sudo apt install libfdt-dev cmake squashfs-tools gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
       - name: Run builder script
         run: |
@@ -35,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: images
-          path: "*.itb"
+          path: "*.*i*"
 
   release:
     if: inputs.no_release == '0'
