also build bl2 image for debugging issue ERROR:   BL2: Failed to load image id 5 (-2)
If you encounter this issue, please use mtk_uartboot to load this
special bl2 image which will give lots of debugging output and hopefully
tell us what's happening.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,4 +58,4 @@ jobs:
 
       # https://cli.github.com/manual/gh_release_upload
       - name: Upload assets
-        run: gh release upload ${{ inputs.tag || github.ref_name }} images/*.itb --clobber
+        run: gh release upload ${{ inputs.tag || github.ref_name }} images/*.*i* --clobber
